automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df[\"Home Team Name\"].str.contains('Korea'), \"Home Team Name\" ]"
+    "df.loc[df[\"Home Team Name\"].str.contains('Korea'), \"Home Team Name\" ]\n",
+    "df.loc[df[\"Home Team Name\"].str.contains('Korea')]"
    ]
   },
   {
@@ -367,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
